Build/third-party-libraries/packages/nuget.org/system.componentmodel.typeconverter/4.1.0/readme.md
System.ComponentModel.TypeConverter [4.1.0](https://www.nuget.org/packages/System.ComponentModel.TypeConverter/4.1.0)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides the System.ComponentModel.TypeConverter class, which represents a unified way of converting types of values to other types.

Commonly Used Types:
System.ComponentModel.TypeConverter
System.ComponentModel.TypeConverterAttribute
System.ComponentModel.PropertyDescriptor
System.ComponentModel.StringConverter
System.ComponentModel.ITypeDescriptorContext
System.ComponentModel.EnumConverter
System.ComponentModel.TypeDescriptor
System.ComponentModel.Int32Converter
System.ComponentModel.BooleanConverter
System.ComponentModel.DoubleConverter
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 7
-----------

|Name|Version|
|----------|:----|
|[System.Collections.NonGeneric](../../../../packages/nuget.org/system.collections.nongeneric/4.0.1)|4.0.1|
|[System.Collections.Specialized](../../../../packages/nuget.org/system.collections.specialized/4.0.1)|4.0.1|
|[System.ComponentModel](../../../../packages/nuget.org/system.componentmodel/4.0.1)|4.0.1|
|[System.ComponentModel.Primitives](../../../../packages/nuget.org/system.componentmodel.primitives/4.1.0)|4.1.0|
|[System.Linq](../../../../packages/nuget.org/system.linq/4.1.0)|4.1.0|
|[System.Reflection.TypeExtensions](../../../../packages/nuget.org/system.reflection.typeextensions/4.1.0)|4.1.0|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|

*This page was generated by a tool.*